Fixed overflow on navbar, lendahandsurvey and contactus on mobile

--- a/css/creative.css
+++ b/css/creative.css
@@ -222,6 +222,7 @@ aside {
   transition: all 0.35s;
   font-family: "Nunito Sans", sans-serif;
   font-weight: 400;
+  max-width: 100vw;
 }
 
 .navbar-default .navbar-header .navbar-brand {
@@ -2350,6 +2351,11 @@ footer .social-media-icon:hover {
   width: 100%;
 }
 
+.help-section * {
+  max-width: 100vw;
+  white-space: normal;
+}
+
 .help-section .close {
   margin: 10px 15px 10px 0;
 }
@@ -4445,7 +4451,7 @@ img {
   color: #006b8f
 }
 
-.bmff-button {
+.bmff-survey-button {
   background-color: #f07015;
   border-radius: 40px;
   color: white;
@@ -4459,8 +4465,12 @@ img {
 .bmff-grid {
   display: grid;
   -ms-display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   max-width: 1100px;
+}
+
+.bmff-grid img {
+  max-width: 100%;
 }
 
 .bmff-button-grid {
@@ -4469,12 +4479,14 @@ img {
   align-items: center;
 }
 
-.bmff-grid-item {
+.bmff-button-grid-item {
   background-color: #f07015;
   border-radius: 20px;
   width: 400px;
+  max-width: 100vw;
   padding: 20px;
   color: white;
   font-weight: bold;
   margin-top: 1em;
+  white-space: normal;
 }
